--- a/1.js_free/7.2DOM属性和方法.html
+++ b/1.js_free/7.2DOM属性和方法.html
@@ -39,7 +39,7 @@
     *   .nextElementSibling 获取弟弟元素节点
     *   .firstChild     获取所有子节点中的第一个
     *   .lastChild      获取所有子节点中的最后一个
-    *
+    *   .firstElementChild 获取元素子节点中的第一个
     *
     *
     *
