--- a/3.js_second/day_01/5.call和apply实战.html
+++ b/3.js_second/day_01/5.call和apply实战.html
@@ -102,7 +102,7 @@
 * arguments和数组非常类似，数组的相关操作arguments同样也适用，所以我们让数组的方法执行，并且让方法中
 * 中的this变为arguments
 *   var arr=Array.prototype.slice.call(arguments,0)
-*   var arr=[].slice.call(argumentssssss);
+*   var arr=[].slice.call(arguments);
 * */
 //    function avgFn(){
 //
