--- a/1.js_free/7.2DOM属性和方法.html
+++ b/1.js_free/7.2DOM属性和方法.html
@@ -33,9 +33,9 @@
     *   .childNodes  获取所有的子节点
     *   .children    获取所有的元素子节点
     *   .parentNode  获取所有的父节点
-    *   .previousSibling    获取哥哥文本节点
+    *   .previousSibling    获取哥哥节点
     *   .previousElementSibling  获取哥哥元素节点
-    *   .nextSibling    获取弟弟文本节点
+    *   .nextSibling    获取弟弟节点
     *   .nextElementSibling 获取弟弟元素节点
     *   .firstChild     获取所有子节点中的第一个
     *   .lastChild      获取所有子节点中的最后一个
