--- a/10.js_ninth/1.响应式.html
+++ b/10.js_ninth/1.响应式.html
@@ -21,7 +21,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="initial-scale=1.0">
     <title>响应式布局</title>
     <style>
         *{
@@ -65,7 +65,7 @@
     * PC页面在终端设备上打开的时候默认会以最小缩放的模式打开,目的就是为了防止滚动条的出现,浏览器手机调试窗口
     *   -0.4+代表对应缩放比例,对应以iphone6为例Screen375×627,对应缩放比例375/980
     * css像素 px;
-    * 设备像素(设备无关像素):安卓dp、iosdip
+    * 设备像素(设备无关像素):安卓dp、iosdpi
     * 设备像素比:css像素/设备像素  2倍图为主 3倍图可做可不做(6 plus)
     * bjango.com/articles/min-device-pixel-ratio
     *
