--- a/10.js_ninth/history_01.html
+++ b/10.js_ninth/history_01.html
@@ -9,7 +9,7 @@
 <a href="history_02.html">再去下一页</a>
 <script>
 //    var stateObj={foo:"third"};
-//    history.pushState(stateObj, "page 3", "history_middle.html");
+//    history.pushState(stateObj, "page 3", "/history_middle.html");
 </script>
 </body>
 </html>
