--- a/other_expand/1.1event.html
+++ b/other_expand/1.1event.html
@@ -410,6 +410,12 @@ d2.addEventListener('htmlchange',function(){
 },false)
 
 
+/*
+* DOM事件:
+*   Media(video/audio)事件:onplay、onpause、onended、onloadstart、onerror、......
+*   动画事件:animationend(CSS动画结束时触发)、animationstart(CSS动画开始播放时触发)、animationiteration(CSS动画重复播放时触发)
+*   过渡事件:transitionend(CSS完成过渡后触发)
+* */
 
 
 </script>
