--- a/1.js_free/6.3实例数组去重.html
+++ b/1.js_free/6.3实例数组去重.html
@@ -19,7 +19,7 @@
 //    for(var i=0;i<str1.length;i++){
 //        if(!obj[str1[i]]){
 //            str2.push(str1[i]);
-//            obj[str1[i]]=true;
+//            obj[str1[i]]=true;//不能给obj[str1[i]]=i因为obj[str1[i]]得到的是i值
 //        }
 //    }
 //    console.log(str2);
