--- a/10.js_ninth/Css3讲解.html
+++ b/10.js_ninth/Css3讲解.html
@@ -150,11 +150,11 @@
             width:100px;
             height:100px;
             background-color:orange;
-            transition:transform 0.8s ease-in-out;
+            transition:all 0.8s ease-in-out;
         }
         div.transform_translate:hover{
             transform:scale(1.5,1.5) translateX(100px) rotate(180deg);
-            transition:transform 0.8s ease-in-out;
+            transition:all 0.8s ease-in-out;
         }
         div.transform_scale{
             width:100px;
@@ -231,7 +231,7 @@
 <div class="transform_scale"></div>
 
 <div style="width:200px;height:200px;margin-bottom:100px;background-color:#ccc;" class="curDiv">这里是animate.css动画库</div>
-<link href="//cdn.bootcss.com/animate.css/3.5.2/animate.min.css" rel="stylesheet">
+<link href="http://cdn.bootcss.com/animate.css/3.5.2/animate.min.css" rel="stylesheet">
 <script>
     window.onload=function(){
         var curDiv=document.querySelector('.curDiv');
