--- a/2.js_first/day_01/预解释.html
+++ b/2.js_first/day_01/预解释.html
@@ -36,6 +36,16 @@
 
 		b=12;*/
 
+//	var n=9;
+//	function fn(){
+//		n=7;
+//		console.log(n);//在私有作用域下，首先也要预解释，声明(定义的)变量和函数都属于私有作用域的,所以一个函数中出现了变量，如果想看他是全局的还是私有的，就看有没有预解释就可以了，有的话是私有的，没有的话往上一级找，直到找到window，如果还没有的话报错;
+//		console.log(window.n);//接上述,私有作用域下有var n预解释,所以n=7是在给函数私有变量赋值
+//		var n=6;
+//		console.log(n);
+//	}
+//	fn();
+
 	//预解释：浏览器解析js的时候，首先在代码执行前找到所有带var 和function关键字的，提前声明(定义)，然后找完了，在从上倒下执行(预解释是一点节操都没有的)
 		//var 预解释
 			//代码执行前先 声明declare
