--- a/1.js_free/1.数据类型.html
+++ b/1.js_free/1.数据类型.html
@@ -6,6 +6,28 @@
 </head>
 <body>
 <script>
+    //->1.面试题
+    var str='123abc';
+    console.log(typeof str++);//'number'
+    //->2.面试题
+    var a={m:1};
+    var b=a;
+    a.x=a={n:1};
+    console.log(a.x);//undefined
+    console.log(b.x);//{n:1}
+    //->3.运算符优先级
+    /*
+    * ++、--运算符的运算原理:如果是前缀运算符,则先将变量加后再运算;
+    * 如果是后缀运算符,在经过其它运算符(+、-、*、/、%)后(不是计算完后)改变
+    * */
+    var a=3;
+    console.log(a+=a+=a++*a--);//18 先计算a++*a--,a++中a的值为3当遇到*表示运算结束后a的值为4,所以a++*a--值为12,此后--将a变为3然后从左向右运算
+    var b=3;
+    console.log(b+=b+=++b*--b);//18
+    var c=3;
+    console.log(c+++c);//7 可以理解为(c++)+c 3+4
+
+
     //js中的数据类型：
     //基本数据类型：number、string、boolean、null、undefined
     //引用数据类型：
