--- a/4.js_third/day_01/2.2图片延时加载.html
+++ b/4.js_third/day_01/2.2图片延时加载.html
@@ -40,7 +40,7 @@
 //    //把这个图片底片的位置保存在这张图片元素的自定义属性posi上
 //    oImg.posi=utils.getOffset(oImg).top+oImg.offsetHeight;
 //    window.onscroll=function(){
-//        if(oImg.loaded){
+//        if(oImg.loaded){//这里是通过自定义属性实现,也可以通过oImg.complete实现
 //            return;
 //        }
 //        //计算浏览器底边的位置
