--- a/5.js_forth/day_02/2.轮播图渐隐渐现版.html
+++ b/5.js_forth/day_02/2.轮播图渐隐渐现版.html
@@ -22,9 +22,26 @@
     <a class="bannerLeft" href="javascript:;"></a>
     <a class="bannerRight" href="javascript:;"></a>
 </div>
+
+<div class="banner" id="banner2" style="margin-top:50px;">
+    <div class="bannerInner">
+        <!--<div><img src="" trueImg="img/banner1.jpg" /></div>
+        <div><img src="" trueImg="img/banner2.jpg" /></div>
+        <div><img src="" trueImg="img/banner3.jpg" /></div>
+        <div><img src="" trueImg="img/banner4.jpg" /></div>-->
+    </div>
+    <ul class="bannerTip">
+        <!--<li class="bg"></li>
+        <li></li>
+        <li></li>
+        <li></li>-->
+    </ul>
+    <a class="bannerLeft" href="javascript:;"></a>
+    <a class="bannerRight" href="javascript:;"></a>
+</div>
 <script type="text/javascript" src="../../utils-zhufeng.js"></script>
 <script type="text/javascript" src="../../tween.js"></script>
-<script type="text/javascript" src="./js/banner.js"></script>
+<script type="text/javascript" src="./js/AutoBanner.js"></script>
 <script>
     /*
     * 轮播图渐隐渐现显示原理:
@@ -33,6 +50,8 @@
     *   经过轮播时间以后,让第二张图片的z-index=1,然后其它的z-index=0,此时第二张透明度依然是0,只有第一张opacity=1,
     * 这时用户看到的还是第一张,紧接着让第二张的opacity=1,其它的图片opacity=0;
     * */
+    var banner1=new AutoBanner('banner','bannerData',1000);
+    var banner2=new AutoBanner('banner2','bannerData_bak',2000);
 </script>
 </body>
 </html>
