--- a/10.js_ninth/Css3.flex-box.html
+++ b/10.js_ninth/Css3.flex-box.html
@@ -97,6 +97,15 @@
 </div>
 <script>
     /*
+    * flexbox布局及兼容性链接:
+    *   http://www.w3cplus.com/css3/designing-css-layout-with-flexbox.html  [牛逼]
+    *   http://caibaojian.com/flexbox-guide.html
+    *   http://blog.csdn.net/cddcj/article/details/52131089
+    *   http://www.cnblogs.com/moqiutao/p/4807792.html  [div中内容垂直居中的五种方法]
+    *   http://www.cnblogs.com/coco1s/p/4444383.html   [水平居中的方法]
+    *   http://www.cnblogs.com/yisheng/archive/2012/12/18/2823089.html
+    *   http://www.3lian.com/edu/2015/05-13/212524.html
+    *
     * 演示属性注意:
     *   http://www.ruanyifeng.com/blog/2015/07/flex-grammar.html
     *   演示justify-content属性,需要把flex-item相关的flex属性注释掉,然后把width解开注释;演示align-items需要把height解开注释
