--- a/6.js_fifth/day_01/1.1事件基础.html
+++ b/6.js_fifth/day_01/1.1事件基础.html
@@ -26,7 +26,7 @@
     * */
     var oDiv=document.getElementById('div1');
     /*
-    * DOM0级事件绑定   onclick这个行为定义在当前元素的私有属性上
+    * DOM0级事件绑定   onclick这个行为定义在当前元素的私有属性上(如私有属性上所有带on的方法)
     *   重要:不仅把绑定的方法执行了,而且浏览器还默认的给这个方法传递了一个参数值MouseEvent:鼠标事件对象,
     * 它是一个对象数据类型,里面包含了很多的属性名和属性值,用来记录当前鼠标的相关信息,
     * MouseEvent->UIEvent->Event->Object
